--- a/Views/EmployeView.axaml
+++ b/Views/EmployeView.axaml
@@ -11,11 +11,13 @@
 		<TextBlock Text="Gestion des Employés" FontSize="24" HorizontalAlignment="Center" Margin="0,20,0,20"/>
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
 			<TextBox x:Name="FirstNameTextBox" Width="200" Margin="5" Watermark="FirstName" Text="{Binding FirstName}"/>
-			<TextBlock Text="{Binding ErrorsForFirstName}" Foreground="Red" />
 			<TextBox x:Name="LastNameTextBox" Width="200" Margin="5" Watermark="LastName" Text="{Binding LastName}"/>
-			<TextBlock Text="{Binding ErrorsForLastName}" Foreground="Red" />
-			<TextBox x:Name="RoleTextBox" Width="200" Margin="5" Watermark="Role" Text="{Binding Role}"/>
-			<TextBlock Text="{Binding ErrorsForRole}" Foreground="Red" />
+			<!--<TextBox x:Name="RoleTextBox" Width="200" Margin="5" Watermark="Role" Text="{Binding Role}"/>-->
+			<ComboBox SelectedIndex="0" x:Name="RoleTextBox"
+					  SelectedItem="{Binding Role, Mode=TwoWay}">
+				<ComboBoxItem>ADMIN</ComboBoxItem>
+				<ComboBoxItem>USER</ComboBoxItem>
+			</ComboBox>
 			<Button Content="Ajouter" Click="OnAddClick" Margin="5"/>
 		</StackPanel>
 		<ListBox x:Name="EmployeListBox" Width="600" Height="400" Margin="20" SelectionChanged="OnSelectionChanged">
